fixed homepage grammar errors

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     Welcome to my website!
                 </p>
                 <p>
-                    I'm a Canadian-American raised in Palo Alto who loves the nature, people, and design. I'm currently
+                    I'm a Canadian-American raised in Palo Alto who loves the outdoors, people, and design. I'm currently
                     self-employed as a construction consultant.
                 </p>
                 <p>
