basic updates and images to portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -73,6 +73,8 @@
         <section>
             <h2>Experience</h2>
             <ul>
+                <li><strong>Contractor, Cal and Fynn Construction</strong> (2025-Present) - California</li>
+                <li><strong>Design Consultant, System Pavers</strong> (2024-2025) - California</li>
                 <li><strong>Director of Operations, Reman.Co</strong> (2022-2024) - California</li>
                 <li><strong>Founder, Reman.Co</strong> (2020-2023) - Minneapolis, MN</li>
                 <li><strong>Student Researcher, Dept. of Neurosurgery, UMN</strong> (2021-2022)</li>
@@ -84,7 +86,7 @@
         <section>
             <h2>Education</h2>
             <ul>
-                <li><strong>University of Minnesota</strong> - B.S. in Cellular & Organismal Physiology (2019-2023)</li>
+                <li><strong>University of Minnesota</strong> - B.S. in Cellular & Organismal Physiology (2019-2024)</li>
                 <li><strong>National University</strong> - EMT Licensure (2020-2021)</li>
             </ul>
         </section>
