removed home links

--- a/index.html
+++ b/index.html
@@ -51,11 +51,9 @@
                     Welcome to my website!
                 </p>
                 <p>
-                    I'm a Canadian-American raised in Palo Alto who loves the outdoors, people, and design. 
+                    I'm a Canadian-American raised in Palo Alto who loves the outdoors, people, and design.
                     I studied Cellular and Organismal Physiology at the University of Minnesota, Twin Cities, receiving my Sc. B. in 2024.
-                    Currently I'm self-employed as a 
-                    <a href="http://baystone.partners" target="_blank" rel="noopener noreferrer">construction consultant</a> 
-                    in the Bay Area.
+                    Currently I'm self-employed as a construction consultant in the Bay Area.
                 </p>
                 <p>
                     Like many, I dislike stagnation and consider myself a fairly active person - I don't mind taking
@@ -64,9 +62,7 @@
                     Taking action to implement and test these opinions is a large part of what brings me joy.
                 </p>
 
-                <p>This site is a curated collection of
-                    <a href="portfolio.html">projects</a> and
-                    <a href="blog.html">thoughts</a> to share with anyone interested.</p>
+                <p>This site is a curated collection of projects and thoughts to share with anyone interested.</p>
             </div>
             <div class="site-links">
                 <ul>
